Fix blog 1: Remove broken image and reduce excessive white space
- Remove unavailable related post image from sidebar
- Reduce bottom padding on blog post content from 80px to 40px (desktop)
- Reduce bottom padding from 60px to 30px (mobile)

--- a/style.css
+++ b/style.css
@@ -3627,7 +3627,7 @@ html {
 /* Blog Post Content */
 .blog-post-content {
   background: var(--white);
-  padding: 60px 0 80px;
+  padding: 60px 0 40px;
 }
 
 .blog-post-content .container {
@@ -3972,7 +3972,7 @@ html {
   }
 
   .blog-post-content {
-    padding: 40px 0 60px;
+    padding: 40px 0 30px;
   }
 
   .blog-post-content .container {
